[gd_scene load_steps=3 format=2]

[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Director.gd" type="Script" id=2]

[node name="World" type="Node"]

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 3.32373, -7.75574 )

[node name="Director" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Director"]

[node name="OppGroup" type="Node" parent="Director"]

[node name="AllyGroup" type="Node" parent="Director"]

[connection signal="timeout" from="Director/Timer" to="Director" method="_on_Timer_timeout"]
